2012-10-29
	
	* configure.in, NEWS: release 2.4.91

2012-10-22  Pawel Salek

	* libbalsa/imap/pop3.c: fix long-line POP3 bug reported by Rob Landley.

2012-09-30  Peter Bloomfield

	* src/store-address.c (store_address_add_address),
	(store_address_add_list): store a group as a distribution list,
	if the address book implements lists.

2012-09-30  Peter Bloomfield

	* libbalsa/libbalsa.c (ask_cert_real): replace "&" by "&amp;" in
	marked-up string.

2012-09-17  Peter Bloomfield

	Fix bgo #684124

	* libinit_balsa/assistant_page_defclient.c
	(balsa_druid_page_defclient_init): capitalize "Balsa".
	* src/balsa-mime-widget-callbacks.c
	(balsa_mime_widget_ctx_menu_save): capitalize "URI".
	* src/filter-edit-dialog.c (filters_edit_dialog): space after
	".".

2012-09-17  Ildar Mulyukov <ildar@altlinux.ru>

	* balsa.desktop.in.in: fix desktop categories.

2012-09-17  Peter Bloomfield

	Revert all changes moving Gtk access from subthreads to main
	thread.

	* libbalsa/libbalsa.c (libbalsa_threads_enter):
	* libbalsa/mailbox.c (lbm_index_entry_new_from_msg),
	(libbalsa_mailbox_close), (libbalsa_mailbox_msgno_inserted),
	(libbalsa_mailbox_msgno_removed),
	(libbalsa_mailbox_msgno_filt_check), (lbm_cache_message):
	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_load_messages):
	* src/balsa-app.c (find_url), (balsa_find_url):
	* src/balsa-index.c (balsa_index_load_mailbox_node):
	* src/balsa-index.h:
	* src/main-window.c:
	* src/main.c (balsa_progress_set_text),
	(balsa_progress_set_fraction):

2012-09-08  Peter Bloomfield

	* configure.in:  _NL_MEASUREMENT_MEASUREMENT is an enum and not
	a define.
	* src/print-gtk.c (get_default_user_units): use
	HAVE__NL_MEASUREMENT_MEASUREMENT.

2012-08-10  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_get_part_stream):
	simplify filter selection switch.

2012-08-09  Peter Bloomfield

	* src/balsa-mime-widget-message.c (bm_header_widget_realized):
	use BalsaMessage::scroll as the context for header widget
	colors.
