@@ -822,7 +822,7 @@ dnl #####################################################################
 # Spell check detection.
 #
 if test x$with_gtkspell != xno; then
-    PKG_CHECK_MODULES(SPELL, [ gtkspell-3.0 enchant ])
+    PKG_CHECK_MODULES(SPELL, [ gtkspell3-3.0 enchant ])
     AC_DEFINE(HAVE_GTKSPELL,1,[Defined when GtkSpell can be used.])
 else
     PKG_CHECK_MODULES(SPELL, [ enchant ])
